--- a/01SOURCE/base-common/.classpath
+++ b/01SOURCE/base-common/.classpath
@@ -26,9 +26,15 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/base-common-util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/base-jdbc"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/base-datajpa"/>
+	<classpathentry kind="src" output="target/classes" path="target/generated-sources/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
