--- a/01SOURCE/base-generate/pom.xml
+++ b/01SOURCE/base-generate/pom.xml
@@ -52,6 +52,7 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -61,6 +62,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.doublepoint.base</groupId>
+			<artifactId>base-common</artifactId>
+			<version>${cn.doublepoint.base.version}</version>
 		</dependency>
 	</dependencies>
 
