--- a/01SOURCE/base-web-bootstrap/src/main/resources/jdbc.properties
+++ b/01SOURCE/base-web-bootstrap/src/main/resources/jdbc.properties
@@ -2,3 +2,4 @@ jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/test?generateSimpleParameterMetadata=true&characterEncoding=utf8
 jdbc.username = root
 jdbc.password = 123456
+jdbc.databsename = test
