--- a/01SOURCE/base-common/pom.xml
+++ b/01SOURCE/base-common/pom.xml
@@ -1,8 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>base-common</artifactId>
-	
+
 	<parent>
 		<groupId>cn.doublepoint.base</groupId>
 		<artifactId>base-parent</artifactId>
@@ -43,11 +42,9 @@
 
 
 		<!-- 本地项目 -->
-		<!-- <dependency> <groupId>cn.doublepoint.base</groupId> <artifactId>base-datajpa</artifactId> 
-			<version>${cn.doublepoint.base.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>cn.doublepoint.base</groupId> <artifactId>base-datajpa</artifactId> <version>${cn.doublepoint.base.version}</version> </dependency> -->
 
-		<!-- <dependency> <groupId>cn.doublepoint.base</groupId> <artifactId>base-jdbc</artifactId> 
-			<version>${cn.doublepoint.base.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>cn.doublepoint.base</groupId> <artifactId>base-jdbc</artifactId> <version>${cn.doublepoint.base.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>cn.doublepoint.base</groupId>
@@ -100,6 +97,18 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+
+
+			<!-- 解决问题 -source 1.5 中不支持 lambda 表达式 替换为1.8 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
