--- a/01SOURCE/base-common/pom.xml
+++ b/01SOURCE/base-common/pom.xml
@@ -78,7 +78,7 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<!-- <plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
@@ -92,12 +92,12 @@
 								<include>cn.doublepoint.common.domain.model.entity.*</include>
 							</includes>
 							<outputDirectory>target/generated-sources/java</outputDirectory>
-							<!-- <outputDirectory>src/main/java/query</outputDirectory> -->
+							<outputDirectory>src/main/java/query</outputDirectory>
 							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 
 
 			<!-- 解决问题 -source 1.5 中不支持 lambda 表达式 替换为1.8 -->
