--- a/01SOURCE/base-workflow-test/pom.xml
+++ b/01SOURCE/base-workflow-test/pom.xml
@@ -98,6 +98,16 @@
 			<artifactId>activiti-rest</artifactId>
 			<version>5.16</version>
 		</dependency>
+		 <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-diagram-rest</artifactId>
+            <version>5.22.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-cxf</artifactId>
+            <version>5.16</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
