--- a/01SOURCE/base-workflow-test/pom.xml
+++ b/01SOURCE/base-workflow-test/pom.xml
@@ -7,6 +7,10 @@
 		<artifactId>base-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	
+	<properties>
+        <activiti.version>5.22.0</activiti.version>
+    </properties>
 
 	<!-- Modeler模块使用的后台服务都存放在activiti-modeler模块中，在自己的项目中添加依赖： activiti-modeler模块提供模型先关的操作：创建、保存、转换json与xml格式等 activiti-diagram-rest模块用来处理流程图有关的功能：流程图布局（layout）、节点高亮等 -->
 	<dependencies>
@@ -85,28 +89,24 @@
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-modeler</artifactId>
-			<version>5.16</version>
+			 <version>${activiti.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-engine</artifactId>
-			<version>5.16</version>
+			 <version>${activiti.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-rest</artifactId>
-			<version>5.16</version>
+			 <version>${activiti.version}</version>
 		</dependency>
-		 <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-diagram-rest</artifactId>
-            <version>5.22.0</version>
-        </dependency>
+		
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-cxf</artifactId>
-            <version>5.16</version>
+            <version>${activiti.version}</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -123,7 +123,7 @@
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-spring</artifactId>
-			<version>5.16</version>
+			 <version>${activiti.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
