--- a/01SOURCE/base-workflow-test/WebRoot/WEB-INF/web.xml
+++ b/01SOURCE/base-workflow-test/WebRoot/WEB-INF/web.xml
@@ -66,4 +66,15 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- Spring MVC 结束 -->
+	
+	<!-- 拦截器 -->
+	 <filter>  
+        <filter-name>dataDecapsulateFilter</filter-name>  
+        <filter-class>cn.doublepoint.commonutil.filter.DataDecapsulateFilter</filter-class>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>dataDecapsulateFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping>  
+    <!-- 拦截器 -->
 </web-app>
