--- a/01SOURCE/springboot/bootworkflow/pom.xml
+++ b/01SOURCE/springboot/bootworkflow/pom.xml
@@ -3,19 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cn.doublepoint</groupId>
 	<artifactId>bootworkflow</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>bootworkflow</name>
-	<description>Demo project for Spring Boot</description>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>cn.doublepoint.base</groupId>
+		<artifactId>base-parent-springboot</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
