--- a/01SOURCE/springboot/bootweb/src/main/resources/application.yml
+++ b/01SOURCE/springboot/bootweb/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
   port: 8082
 spring:
   datasource:
-    name: test
-    url: jdbc:mysql://localhost:3306/test?generateSimpleParameterMetadata=true&characterEncoding=utf8
+    name: bootweb
+    url: jdbc:mysql://localhost:3306/bootweb?generateSimpleParameterMetadata=true&characterEncoding=utf8
     username: root
     password: 123456
     # 使用druid数据源
