--- a/01SOURCE/vue/vuell/package.json
+++ b/01SOURCE/vue/vuell/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "element-ui": "^2.4.9",
+    "element-ui": "^2.4.10",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -32,6 +32,8 @@
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0"
   }
 }
