--- a/01SOURCE/vue/vuell/package.json
+++ b/01SOURCE/vue/vuell/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.10",
-    "vue": "^2.5.11",
-    "vuex": "^3.0.1"
+    "vue": "^2.5.11"
   },
   "browserslist": [
     "> 1%",
@@ -27,14 +26,15 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "jquery": "^2.2.4",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.23.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0"
+    "webpack-dev-server": "^2.9.1"
   }
 }
