--- a/01SOURCE/vue/vuell/package.json
+++ b/01SOURCE/vue/vuell/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "element-ui": "^2.4.10",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-resource": "^1.5.1"
   },
   "browserslist": [
     "> 1%",
