--- a/01SOURCE/vue/vuell/package.json
+++ b/01SOURCE/vue/vuell/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "element-ui": "^2.4.10",
+    "underscore": "^1.9.1",
+    "underscore.string": "^3.3.5",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1"
   },
