--- a/01SOURCE/base-common-util/pom.xml
+++ b/01SOURCE/base-common-util/pom.xml
@@ -69,7 +69,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.44</version>
 		</dependency>
-
+		
+		<dependency>
+			  <groupId>commons-io</groupId>
+			  <artifactId>commons-io</artifactId>
+			  <version>2.0.1</version>
+		</dependency>
 		<!-- ============== log begin ============== -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
